# ShiftLogic

./: README.md  Untitled.ipynb  main.ipynb  prototype.ipynb  pyproject.toml
data/: Detail.tsv  Manage.tsv  Member.tsv  Shift.tsv
prototype/: Manage.tsv  Member.tsv  Shift.tsv
result/: eval.tsv  result.tsv  show.tsv
src/: log.py  main.py  shift.py  utils.py
