[tool.poetry]
name = "shift_logic"
version = "0.1.0"
description = ""
authors = ["machi-da <yamakazu151@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
numpy = "1.18.5"
PuLP = "2.5.1"
pandas = "1.3.3"
ortoolpy = "0.2.38"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
